--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@ button#next-manual{
 }
 
 
-footer{
+/* footer{
   margin-top:18px;
   color:var(--muted);
   font-size:13px;
   text-align:center
-}
+} */
 
 @keyframes rotate {
   from {
