--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ html,body{
 .app{
   max-width:1100px;
   margin:28px auto;
-  padding:20px;
+  padding:10px;
+  min-height: 100vh; /* plutôt que height:100% */
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 header{
